--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,11 @@
     <dimen name="dialog_title_fontsize">24sp</dimen>
     <dimen name="dialog_input_fontsize">21sp</dimen>
     <dimen name="list_item_fontsize">21sp</dimen>
+    <dimen name="item_padding">15dp</dimen>
+    <dimen name="common_margin">10dp</dimen>
+    <dimen name="extra_margin">15dp</dimen>
+    <dimen name="thumbnail_size">60dp</dimen>
+    <dimen name="thumbnail_corner">15dp</dimen>
+    <dimen name="title_font_size">21dp</dimen>
+    <dimen name="subtitle_font_size">18dp</dimen>
 </resources>
